--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <h2>o que é o autismo?</h2>
+                    <p class="p-2">O transtorno do espectro autista (TEA) é um distúrbio do neurodesenvolvimento caracterizado por desenvolvimento atípico, manifestações comportamentais, déficits na comunicação e na interação social, padrões de comportamentos repetitivos e estereotipados, podendo apresentar um repertório restrito de interesses e atividades.
+                        Sinais de alerta no neurodesenvolvimento da criança podem ser percebidos nos primeiros meses de vida, sendo o diagnóstico estabelecido por volta dos 2 a 3 anos de idade. A prevalência é maior no sexo masculino.
+                        A identificação de atrasos no desenvolvimento, o diagnóstico oportuno de TEA e encaminhamento para intervenções comportamentais e apoio educacional na idade mais precoce possível, pode levar a melhores resultados a longo prazo, considerando a neuroplasticidade cerebral.
+                        
+                        </p>
                 </div>
             </div>
         </section>
